--- a/DataWrangling.ipynb
+++ b/DataWrangling.ipynb
@@ -805,20 +805,20 @@
    "source": [
     "# if we have to anonymize data, we can do something like this, although we dont need to in this data set\n",
     "# we dont have this types of data so it will have an error\n",
-    "def anonymize_data(df):\n",
+    "# def anonymize_data(df):\n",
     "    # Remove columns with PII\n",
-    "    df_anonymized = df.drop(['Name', 'Email', 'Phone'], axis=1)\n",
+    "#    df_anonymized = df.drop(['Name', 'Email', 'Phone'], axis=1)\n",
     "\n",
     "    # Generalization example: Replace ages with age groups\n",
-    "    df_anonymized['Age'] = pd.cut(df['Age'], bins=[0, 18, 30, 50, np.inf], labels=['0-18', '19-30', '31-50', '50+'])\n",
+    "#    df_anonymized['Age'] = pd.cut(df['Age'], bins=[0, 18, 30, 50, np.inf], labels=['0-18', '19-30', '31-50', '50+'])\n",
     "\n",
     "    # Pseudonymization example: Replace IDs with random strings\n",
-    "    df_anonymized['ID'] = np.random.choice(['A', 'B', 'C'], size=len(df))\n",
+    "#    df_anonymized['ID'] = np.random.choice(['A', 'B', 'C'], size=len(df))\n",
     "\n",
-    "    return df_anonymized\n",
+    "#    return df_anonymized\n",
     "\n",
     "# Example usage\n",
-    "anonymized_df = anonymize_data(excel_df)"
+    "# anonymized_df = anonymize_data(excel_df)"
    ]
   },
   {
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f72b59de",
+   "id": "90567a22",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7c8a87ea",
+   "id": "d0878e2d",
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7e3ffc3d",
+   "id": "acffdb04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "94bb4f67",
+   "id": "c23515e0",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "6439580f",
+   "id": "c9445583",
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0285dce3",
+   "id": "ab2d11bd",
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8420916",
+   "id": "4e987a97",
    "metadata": {},
    "outputs": [],
    "source": []
